[gd_scene load_steps=2 format=3 uid="uid://cogfk8c2alswv"]

[ext_resource type="Script" uid="uid://d3oy2fyrmipkx" path="res://project/scripts/components/channel.gd" id="1_e6llj"]

[node name="Channel" type="Node2D"]
script = ExtResource("1_e6llj")

[node name="CoinContainer" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="UnlockButton" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnlockButton"]

[node name="ObserveButton" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObserveButton"]

[node name="ChannelVisual" type="Sprite2D" parent="."]
